--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <li ng-repeat="item in toBuy.items"> {{item.quantity}} of {{item.name}}<button class="btn btn-default" ng-click="toBuy.buyItem($index);"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
 
      </ul>
-     <div ng-if="true" class="emptyMessage">Everything is bought!</div>
+     <div ng-if="false" class="emptyMessage">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
@@ -46,7 +46,7 @@
      <ul>
        <li ng-repeat="item in alreadyBought.items">Bought {{item.quantity}} of {{item.name}}</li>
      </ul>
-     <div ng-if="true" class="emptyMessage">Nothing bought yet.</div>
+     <div ng-if="false" class="emptyMessage">Nothing bought yet.</div>
     </div>
   </div>
 </div>
